- I/O bridge now reports a better error when a I/O handle is 
  expected as an argument but not received.
- added -Dsleep.assert property to enable/disable assertion
  statements.  
- updated SleepClosure#callClosure to use the current preferred
  function calling methods.  This enables closure calls from
  map, reduce, search, etc. to be traced and to count against
  the profiler statistics

2.1-beta 21  (28 Mar 08)
===========
- assignment loops now record proper line number information for
  error reporting purposes.
- added a ? command to evaluate predicates in the Sleep console.
- index operator can now be applied to backtick expressions
- collapsed implementation of &skip and &consume; they now refer 
  to the same function.
- added &readAsObject and &writeAsObject to read/write serialized
  Java objects (in lieu of sleep.runtime.Scalar objects)
- updated &copy to also copy scalars and hashes.
- added &pushl and &popl for creating and removing local scope, 
  arguments to these functions are used to pass data between the
  current and resulting local scope.
- fork now passes copies of its arguments into the forked scope.
  this is in line with how lambda, let, etc.. work.  pass a data
  structure (such as an array or hash) to have updateable shared
  values.
- round function can now round to a desired number of places.
- replace function can now handle empty arguments, it will use
  empty strings in their place.
- added &warn to send a message to the script warning watcher 
  installed within the script environment... 
- true and false arguments are now optional in iff expressions:
  iff(3 == 3) = 1
  iff(3 != 3) = $null
- &push can now push multiple arguments
- added &scalar($object) to force object through the Sleep scalar 
  conversion process.  
- continuations now save multiple levels of local scope if 
  necessary (this makes pushl/popl safe for yield/callcc)
- inline functions will only mangle @_ if unnamed values are